--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rebirth</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            max-width: 600px;
-            margin: 100px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        p {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <p>Our site has moved. Redirecting you to the new location...</p>
-        <p>If you are not redirected automatically, you can <a href="https://www.youtube.com/watch?v=HIcSWuKMwOw">click here</a>.</p>
-    </div>
-
-    <script>
-        // Redirect function
-        function redirectToNewSite() {
-            window.location.href = "https://www.youtube.com/watch?v=HIcSWuKMwOw";
-        }
-
-        // Set timeout to redirect after 2 seconds
-        setTimeout(redirectToNewSite, 2000);
-    </script>
-</body>
-</html>
+<script>var s="=\"EPDUZQF!iunm?=iunm!mboh>#fo#?=ifbe?!!!!=nfub!dibstfu>#VUG.9#?!!!!=nfub!obnf>#wjfxqpsu#!dpoufou>#xjeui>efwjdf.xjeui-!jojujbm.tdbmf>2/1#?!!!!=ujumf?Sfcjsui=0ujumf?!!!!=tuzmf?!!!!!!!!cpez!|!!!!!!!!!!!!gpou.gbnjmz;!Bsjbm-!tbot.tfsjg<!!!!!!!!!!!!nbshjo;!1<!!!!!!!!!!!!qbeejoh;!1<!!!!!!!!!!!!cbdlhspvoe.dpmps;!$g1g1g1<!!!!!!!!~!!!!!!!!/dpoubjofs!|!!!!!!!!!!!!nby.xjeui;!711qy<!!!!!!!!!!!!nbshjo;!211qy!bvup<!!!!!!!!!!!!qbeejoh;!31qy<!!!!!!!!!!!!cbdlhspvoe.dpmps;!$ggg<!!!!!!!!!!!!cpsefs.sbejvt;!9qy<!!!!!!!!!!!!cpy.tibepx;!1!1!21qy!shcb)1-!1-!1-!1/2*<!!!!!!!!!!!!ufyu.bmjho;!dfoufs<!!!!!!!!~!!!!!!!!q!|!!!!!!!!!!!!gpou.tj{f;!29qy<!!!!!!!!!!!!nbshjo.cpuupn;!31qy<!!!!!!!!~!!!!=0tuzmf?=0ifbe?=cpez?!!!!=ejw!dmbtt>#dpoubjofs#?!!!!!!!!=q?Pvs!tjuf!ibt!npwfe/!Sfejsfdujoh!zpv!up!uif!ofx!mpdbujpo///=0q?!!!!!!!!=q?Jg!zpv!bsf!opu!sfejsfdufe!bvupnbujdbmmz-!zpv!dbo!=b!isfg>#iuuqt;00xxx/zpvuvcf/dpn0xbudi@w>IJdTXvLNxPx#?dmjdl!ifsf=0b?/=0q?!!!!=0ejw?!!!!=tdsjqu?!!!!!!!!00!Sfejsfdu!gvodujpo!!!!!!!!gvodujpo!sfejsfduUpOfxTjuf)*!|!!!!!!!!!!!!xjoepx/mpdbujpo/isfg!>!#iuuqt;00xxx/zpvuvcf/dpn0xbudi@w>IJdTXvLNxPx#<!!!!!!!!~!!!!!!!!00!Tfu!ujnfpvu!up!sfejsfdu!bgufs!3!tfdpoet!!!!!!!!tfuUjnfpvu)sfejsfduUpOfxTjuf-!3111*<!!!!=0tdsjqu?=0cpez?=0iunm?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript>You must enable JavaScript to see this text.</noscript>
